# follow_me_and_line

./: README.md  follow_me_line.py  ui.py
icons/: qt.qrc
line_follow/: CMakeLists.txt  package.xml
line_follow/src/: color_thresholding.cpp  line_following.cpp  video_stream.cpp
line_follow/test_scripts/: algo_line_follow_fleet.ipynb  graph_algo.ipynb  graph_algo_main.py  graph_test.py  line_follow_th.py  line_following_test.py  rl_sense.py  rl_sense_follow_me.py  rs_math.py  test.py
line_follow/test_scripts/.ipynb_checkpoints/: algo_line_follow_fleet-checkpoint.ipynb  graph_algo-checkpoint.ipynb
line_follow_main/: Qr_code_gen.py  algo_main.py  base_graph_draw.py  digit_recog.py  follow_line_main.py  graph_algo_main.py  grid_path_finder.py  rl_sense_follow_line.py  rl_sense_follow_line_base.py  rs_cmd_vel_test.py  vtx_edg.csv
line_follow_main/config/: factory2.json  json_dump.py  output.json  vtx_edg.json
line_following_DL/: follow_line_ui.py  follow_me_line_ui.py  graph_motion_planning.py  graph_server.py  main.py  yolov8_test_rs.py
line_following_DL/config/: vtx_edg.json
line_following_DL/icons/: qt.qrc
test/: array_stream.py  graph_data.json  json_dump.py  keras_ocr.py  opencv_th.py  test_dump.json
ui/: follow_line_base.ui  follow_me_line.ui
yolov8_deep_short_tracking/: yolov8_human_following_rs.py
